Project 4 Template 2/parser.output
State 3 conflicts: 2 shift/reduce
State 111 conflicts: 1 shift/reduce


Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';'
    3                | FUNCTION error ';'

    4 optional_parameters: parameters
    5                    | ε

    6 parameters: parameters ',' parameter
    7           | parameter

    8 parameter: IDENTIFIER ':' type

    9 type: INTEGER
   10     | REAL
   11     | CHARACTER

   12 optional_variable: optional_variable variable
   13                  | variable
   14                  | ε

   15 variable: IDENTIFIER ':' type IS statement ';'
   16         | IDENTIFIER ':' LIST OF type IS list ';'
   17         | error_recovery

   18 list: '(' expressions ')'

   19 expressions: expression
   20            | expressions ',' expression

   21 body: BEGIN_ statement_ END ';'

   22 statement_: ε
   23           | statement_ statement ';'
   24           | statement_ error_recovery

   25 error_recovery: error ';'

   26 inner_statement_check: statement ';'
   27                      | error_recovery

   28 statement: IF condition THEN inner_statement_check optional_elsif ELSE inner_statement_check ENDIF
   29          | WHEN condition ',' expression ':' expression
   30          | SWITCH expression IS cases OTHERS ARROW statement ';' ENDSWITCH
   31          | FOLD direction operator list_choice ENDFOLD
   32          | expression

   33 optional_elsif: optional_elsif ELSIF condition THEN inner_statement_check
   34               | ELSIF condition THEN inner_statement_check
   35               | ε

   36 cases: ε
   37      | cases case

   38 case: CASE INT_LITERAL ARROW statement ';'
   39     | CASE INT_LITERAL ARROW error_recovery
   40     | CASE error ARROW statement ';'
   41     | CASE error ARROW error_recovery

   42 direction: LEFT
   43          | RIGHT

   44 operator: ADDOP
   45         | MULOP
   46         | REMOP
   47         | EXPOP

   48 list_choice: list
   49            | IDENTIFIER

   50 condition: or_condition

   51 or_condition: or_condition OROP and_condition
   52             | and_condition

   53 and_condition: and_condition ANDOP not_unary
   54              | not_unary

   55 not_unary: NOTOP not_unary
   56          | relation

   57 relation: '(' condition ')'
   58         | expression RELOP expression

   59 expression: expression ADDOP term
   60           | term

   61 term: term MULOP power
   62     | term REMOP power
   63     | power

   64 power: unary EXPOP power
   65      | unary

   66 unary: NEGOP unary
   67      | primary

   68 primary: '(' expression ')'
   69        | INT_LITERAL
   70        | CHAR_LITERAL
   71        | REAL_LITERAL
   72        | IDENTIFIER '(' expression ')'
   73        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 57 68 72
    ')' (41) 18 57 68 72
    ',' (44) 6 20 29
    ':' (58) 8 15 16 29
    ';' (59) 2 3 15 16 21 23 25 26 30 38 40
    error (256) 3 25 40 41
    IDENTIFIER <iden> (258) 2 8 15 16 49 72 73
    INT_LITERAL <type> (259) 38 39 69
    CHAR_LITERAL <type> (260) 70
    REAL_LITERAL <type> (261) 71
    ADDOP (262) 44 59
    MULOP (263) 45 61
    ANDOP (264) 53
    RELOP (265) 58
    ARROW (266) 30 38 39 40 41
    OROP (267) 51
    NOTOP (268) 55
    NEGOP (269) 66
    EXPOP (270) 47 64
    REMOP (271) 46 62
    BEGIN_ (272) 21
    CASE (273) 38 39 40 41
    CHARACTER (274) 11
    ELSE (275) 28
    END (276) 21
    ENDSWITCH (277) 30
    FUNCTION (278) 2 3
    INTEGER (279) 9
    IS (280) 15 16 30
    LIST (281) 16
    OF (282) 16
    OTHERS (283) 30
    RETURNS (284) 2
    SWITCH (285) 30
    WHEN (286) 29
    ELSIF (287) 33 34
    IF (288) 28
    ENDIF (289) 28
    FOLD (290) 31
    ENDFOLD (291) 31
    LEFT (292) 42
    RIGHT (293) 43
    THEN (294) 28 33 34
    REAL (295) 10


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    function (47)
        on left: 1
        on right: 0
    function_header <type> (48)
        on left: 2 3
        on right: 1
    optional_parameters (49)
        on left: 4 5
        on right: 2
    parameters (50)
        on left: 6 7
        on right: 4 6
    parameter (51)
        on left: 8
        on right: 6 7
    type <type> (52)
        on left: 9 10 11
        on right: 2 8 15 16
    optional_variable (53)
        on left: 12 13 14
        on right: 1 12
    variable (54)
        on left: 15 16 17
        on right: 12 13
    list <type> (55)
        on left: 18
        on right: 16 48
    expressions <type> (56)
        on left: 19 20
        on right: 18 20
    body <type> (57)
        on left: 21
        on right: 1
    statement_ <type> (58)
        on left: 22 23 24
        on right: 21 23 24
    error_recovery (59)
        on left: 25
        on right: 17 24 27 39 41
    inner_statement_check <type> (60)
        on left: 26 27
        on right: 28 33 34
    statement <type> (61)
        on left: 28 29 30 31 32
        on right: 15 23 26 30 38 40
    optional_elsif <type> (62)
        on left: 33 34 35
        on right: 28 33
    cases <type> (63)
        on left: 36 37
        on right: 30 37
    case <type> (64)
        on left: 38 39 40 41
        on right: 37
    direction (65)
        on left: 42 43
        on right: 31
    operator (66)
        on left: 44 45 46 47
        on right: 31
    list_choice <type> (67)
        on left: 48 49
        on right: 31
    condition <type> (68)
        on left: 50
        on right: 28 29 33 34 57
    or_condition <type> (69)
        on left: 51 52
        on right: 50 51
    and_condition <type> (70)
        on left: 53 54
        on right: 51 52 53
    not_unary <type> (71)
        on left: 55 56
        on right: 53 54 55
    relation <type> (72)
        on left: 57 58
        on right: 56
    expression <type> (73)
        on left: 59 60
        on right: 19 20 29 30 32 58 59 68 72
    term <type> (74)
        on left: 61 62 63
        on right: 59 60 61 62
    power <type> (75)
        on left: 64 65
        on right: 61 62 63 64
    unary <type> (76)
        on left: 66 67
        on right: 64 65 66
    primary <type> (77)
        on left: 68 69 70 71 72 73
        on right: 67


State 0

    0 $accept: • function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION • IDENTIFIER optional_parameters RETURNS type ';'
    3                | FUNCTION • error ';'

    error       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: function • $end

    $end  shift, and go to state 6


State 3

    1 function: function_header • optional_variable body

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8

    error       [reduce using rule 14 (optional_variable)]
    IDENTIFIER  [reduce using rule 14 (optional_variable)]
    BEGIN_      reduce using rule 14 (optional_variable)

    optional_variable  go to state 9
    variable           go to state 10
    error_recovery     go to state 11


State 4

    3 function_header: FUNCTION error • ';'

    ';'  shift, and go to state 12


State 5

    2 function_header: FUNCTION IDENTIFIER • optional_parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 5 (optional_parameters)

    optional_parameters  go to state 14
    parameters           go to state 15
    parameter            go to state 16


State 6

    0 $accept: function $end •

    $default  accept


State 7

   25 error_recovery: error • ';'

    ';'  shift, and go to state 17


State 8

   15 variable: IDENTIFIER • ':' type IS statement ';'
   16         | IDENTIFIER • ':' LIST OF type IS list ';'

    ':'  shift, and go to state 18


State 9

    1 function: function_header optional_variable • body
   12 optional_variable: optional_variable • variable

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    BEGIN_      shift, and go to state 19

    variable        go to state 20
    body            go to state 21
    error_recovery  go to state 11


State 10

   13 optional_variable: variable •

    $default  reduce using rule 13 (optional_variable)


State 11

   17 variable: error_recovery •

    $default  reduce using rule 17 (variable)


State 12

    3 function_header: FUNCTION error ';' •

    $default  reduce using rule 3 (function_header)


State 13

    8 parameter: IDENTIFIER • ':' type

    ':'  shift, and go to state 22


State 14

    2 function_header: FUNCTION IDENTIFIER optional_parameters • RETURNS type ';'

    RETURNS  shift, and go to state 23


State 15

    4 optional_parameters: parameters •
    6 parameters: parameters • ',' parameter

    ','  shift, and go to state 24

    $default  reduce using rule 4 (optional_parameters)


State 16

    7 parameters: parameter •

    $default  reduce using rule 7 (parameters)


State 17

   25 error_recovery: error ';' •

    $default  reduce using rule 25 (error_recovery)


State 18

   15 variable: IDENTIFIER ':' • type IS statement ';'
   16         | IDENTIFIER ':' • LIST OF type IS list ';'

    CHARACTER  shift, and go to state 25
    INTEGER    shift, and go to state 26
    LIST       shift, and go to state 27
    REAL       shift, and go to state 28

    type  go to state 29


State 19

   21 body: BEGIN_ • statement_ END ';'

    $default  reduce using rule 22 (statement_)

    statement_  go to state 30


State 20

   12 optional_variable: optional_variable variable •

    $default  reduce using rule 12 (optional_variable)


State 21

    1 function: function_header optional_variable body •

    $default  reduce using rule 1 (function)


State 22

    8 parameter: IDENTIFIER ':' • type

    CHARACTER  shift, and go to state 25
    INTEGER    shift, and go to state 26
    REAL       shift, and go to state 28

    type  go to state 31


State 23

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS • type ';'

    CHARACTER  shift, and go to state 25
    INTEGER    shift, and go to state 26
    REAL       shift, and go to state 28

    type  go to state 32


State 24

    6 parameters: parameters ',' • parameter

    IDENTIFIER  shift, and go to state 13

    parameter  go to state 33


State 25

   11 type: CHARACTER •

    $default  reduce using rule 11 (type)


State 26

    9 type: INTEGER •

    $default  reduce using rule 9 (type)


State 27

   16 variable: IDENTIFIER ':' LIST • OF type IS list ';'

    OF  shift, and go to state 34


State 28

   10 type: REAL •

    $default  reduce using rule 10 (type)


State 29

   15 variable: IDENTIFIER ':' type • IS statement ';'

    IS  shift, and go to state 35


State 30

   21 body: BEGIN_ statement_ • END ';'
   23 statement_: statement_ • statement ';'
   24           | statement_ • error_recovery

    error         shift, and go to state 7
    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    END           shift, and go to state 41
    SWITCH        shift, and go to state 42
    WHEN          shift, and go to state 43
    IF            shift, and go to state 44
    FOLD          shift, and go to state 45
    '('           shift, and go to state 46

    error_recovery  go to state 47
    statement       go to state 48
    expression      go to state 49
    term            go to state 50
    power           go to state 51
    unary           go to state 52
    primary         go to state 53


State 31

    8 parameter: IDENTIFIER ':' type •

    $default  reduce using rule 8 (parameter)


State 32

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type • ';'

    ';'  shift, and go to state 54


State 33

    6 parameters: parameters ',' parameter •

    $default  reduce using rule 6 (parameters)


State 34

   16 variable: IDENTIFIER ':' LIST OF • type IS list ';'

    CHARACTER  shift, and go to state 25
    INTEGER    shift, and go to state 26
    REAL       shift, and go to state 28

    type  go to state 55


State 35

   15 variable: IDENTIFIER ':' type IS • statement ';'

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    SWITCH        shift, and go to state 42
    WHEN          shift, and go to state 43
    IF            shift, and go to state 44
    FOLD          shift, and go to state 45
    '('           shift, and go to state 46

    statement   go to state 56
    expression  go to state 49
    term        go to state 50
    power       go to state 51
    unary       go to state 52
    primary     go to state 53


State 36

   72 primary: IDENTIFIER • '(' expression ')'
   73        | IDENTIFIER •

    '('  shift, and go to state 57

    $default  reduce using rule 73 (primary)


State 37

   69 primary: INT_LITERAL •

    $default  reduce using rule 69 (primary)


State 38

   70 primary: CHAR_LITERAL •

    $default  reduce using rule 70 (primary)


State 39

   71 primary: REAL_LITERAL •

    $default  reduce using rule 71 (primary)


State 40

   66 unary: NEGOP • unary

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    unary    go to state 58
    primary  go to state 53


State 41

   21 body: BEGIN_ statement_ END • ';'

    ';'  shift, and go to state 59


State 42

   30 statement: SWITCH • expression IS cases OTHERS ARROW statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    expression  go to state 60
    term        go to state 50
    power       go to state 51
    unary       go to state 52
    primary     go to state 53


State 43

   29 statement: WHEN • condition ',' expression ':' expression

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NOTOP         shift, and go to state 61
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 62

    condition      go to state 63
    or_condition   go to state 64
    and_condition  go to state 65
    not_unary      go to state 66
    relation       go to state 67
    expression     go to state 68
    term           go to state 50
    power          go to state 51
    unary          go to state 52
    primary        go to state 53


State 44

   28 statement: IF • condition THEN inner_statement_check optional_elsif ELSE inner_statement_check ENDIF

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NOTOP         shift, and go to state 61
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 62

    condition      go to state 69
    or_condition   go to state 64
    and_condition  go to state 65
    not_unary      go to state 66
    relation       go to state 67
    expression     go to state 68
    term           go to state 50
    power          go to state 51
    unary          go to state 52
    primary        go to state 53


State 45

   31 statement: FOLD • direction operator list_choice ENDFOLD

    LEFT   shift, and go to state 70
    RIGHT  shift, and go to state 71

    direction  go to state 72


State 46

   68 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    expression  go to state 73
    term        go to state 50
    power       go to state 51
    unary       go to state 52
    primary     go to state 53


State 47

   24 statement_: statement_ error_recovery •

    $default  reduce using rule 24 (statement_)


State 48

   23 statement_: statement_ statement • ';'

    ';'  shift, and go to state 74


State 49

   32 statement: expression •
   59 expression: expression • ADDOP term

    ADDOP  shift, and go to state 75

    $default  reduce using rule 32 (statement)


State 50

   60 expression: term •
   61 term: term • MULOP power
   62     | term • REMOP power

    MULOP  shift, and go to state 76
    REMOP  shift, and go to state 77

    $default  reduce using rule 60 (expression)


State 51

   63 term: power •

    $default  reduce using rule 63 (term)


State 52

   64 power: unary • EXPOP power
   65      | unary •

    EXPOP  shift, and go to state 78

    $default  reduce using rule 65 (power)


State 53

   67 unary: primary •

    $default  reduce using rule 67 (unary)


State 54

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 55

   16 variable: IDENTIFIER ':' LIST OF type • IS list ';'

    IS  shift, and go to state 79


State 56

   15 variable: IDENTIFIER ':' type IS statement • ';'

    ';'  shift, and go to state 80


State 57

   72 primary: IDENTIFIER '(' • expression ')'

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    expression  go to state 81
    term        go to state 50
    power       go to state 51
    unary       go to state 52
    primary     go to state 53


State 58

   66 unary: NEGOP unary •

    $default  reduce using rule 66 (unary)


State 59

   21 body: BEGIN_ statement_ END ';' •

    $default  reduce using rule 21 (body)


State 60

   30 statement: SWITCH expression • IS cases OTHERS ARROW statement ';' ENDSWITCH
   59 expression: expression • ADDOP term

    ADDOP  shift, and go to state 75
    IS     shift, and go to state 82


State 61

   55 not_unary: NOTOP • not_unary

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NOTOP         shift, and go to state 61
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 62

    not_unary   go to state 83
    relation    go to state 67
    expression  go to state 68
    term        go to state 50
    power       go to state 51
    unary       go to state 52
    primary     go to state 53


State 62

   57 relation: '(' • condition ')'
   68 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NOTOP         shift, and go to state 61
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 62

    condition      go to state 84
    or_condition   go to state 64
    and_condition  go to state 65
    not_unary      go to state 66
    relation       go to state 67
    expression     go to state 85
    term           go to state 50
    power          go to state 51
    unary          go to state 52
    primary        go to state 53


State 63

   29 statement: WHEN condition • ',' expression ':' expression

    ','  shift, and go to state 86


State 64

   50 condition: or_condition •
   51 or_condition: or_condition • OROP and_condition

    OROP  shift, and go to state 87

    $default  reduce using rule 50 (condition)


State 65

   52 or_condition: and_condition •
   53 and_condition: and_condition • ANDOP not_unary

    ANDOP  shift, and go to state 88

    $default  reduce using rule 52 (or_condition)


State 66

   54 and_condition: not_unary •

    $default  reduce using rule 54 (and_condition)


State 67

   56 not_unary: relation •

    $default  reduce using rule 56 (not_unary)


State 68

   58 relation: expression • RELOP expression
   59 expression: expression • ADDOP term

    ADDOP  shift, and go to state 75
    RELOP  shift, and go to state 89


State 69

   28 statement: IF condition • THEN inner_statement_check optional_elsif ELSE inner_statement_check ENDIF

    THEN  shift, and go to state 90


State 70

   42 direction: LEFT •

    $default  reduce using rule 42 (direction)


State 71

   43 direction: RIGHT •

    $default  reduce using rule 43 (direction)


State 72

   31 statement: FOLD direction • operator list_choice ENDFOLD

    ADDOP  shift, and go to state 91
    MULOP  shift, and go to state 92
    EXPOP  shift, and go to state 93
    REMOP  shift, and go to state 94

    operator  go to state 95


State 73

   59 expression: expression • ADDOP term
   68 primary: '(' expression • ')'

    ADDOP  shift, and go to state 75
    ')'    shift, and go to state 96


State 74

   23 statement_: statement_ statement ';' •

    $default  reduce using rule 23 (statement_)


State 75

   59 expression: expression ADDOP • term

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    term     go to state 97
    power    go to state 51
    unary    go to state 52
    primary  go to state 53


State 76

   61 term: term MULOP • power

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    power    go to state 98
    unary    go to state 52
    primary  go to state 53


State 77

   62 term: term REMOP • power

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    power    go to state 99
    unary    go to state 52
    primary  go to state 53


State 78

   64 power: unary EXPOP • power

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    power    go to state 100
    unary    go to state 52
    primary  go to state 53


State 79

   16 variable: IDENTIFIER ':' LIST OF type IS • list ';'

    '('  shift, and go to state 101

    list  go to state 102


State 80

   15 variable: IDENTIFIER ':' type IS statement ';' •

    $default  reduce using rule 15 (variable)


State 81

   59 expression: expression • ADDOP term
   72 primary: IDENTIFIER '(' expression • ')'

    ADDOP  shift, and go to state 75
    ')'    shift, and go to state 103


State 82

   30 statement: SWITCH expression IS • cases OTHERS ARROW statement ';' ENDSWITCH

    $default  reduce using rule 36 (cases)

    cases  go to state 104


State 83

   55 not_unary: NOTOP not_unary •

    $default  reduce using rule 55 (not_unary)


State 84

   57 relation: '(' condition • ')'

    ')'  shift, and go to state 105


State 85

   58 relation: expression • RELOP expression
   59 expression: expression • ADDOP term
   68 primary: '(' expression • ')'

    ADDOP  shift, and go to state 75
    RELOP  shift, and go to state 89
    ')'    shift, and go to state 96


State 86

   29 statement: WHEN condition ',' • expression ':' expression

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    expression  go to state 106
    term        go to state 50
    power       go to state 51
    unary       go to state 52
    primary     go to state 53


State 87

   51 or_condition: or_condition OROP • and_condition

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NOTOP         shift, and go to state 61
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 62

    and_condition  go to state 107
    not_unary      go to state 66
    relation       go to state 67
    expression     go to state 68
    term           go to state 50
    power          go to state 51
    unary          go to state 52
    primary        go to state 53


State 88

   53 and_condition: and_condition ANDOP • not_unary

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NOTOP         shift, and go to state 61
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 62

    not_unary   go to state 108
    relation    go to state 67
    expression  go to state 68
    term        go to state 50
    power       go to state 51
    unary       go to state 52
    primary     go to state 53


State 89

   58 relation: expression RELOP • expression

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    expression  go to state 109
    term        go to state 50
    power       go to state 51
    unary       go to state 52
    primary     go to state 53


State 90

   28 statement: IF condition THEN • inner_statement_check optional_elsif ELSE inner_statement_check ENDIF

    error         shift, and go to state 7
    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    SWITCH        shift, and go to state 42
    WHEN          shift, and go to state 43
    IF            shift, and go to state 44
    FOLD          shift, and go to state 45
    '('           shift, and go to state 46

    error_recovery         go to state 110
    inner_statement_check  go to state 111
    statement              go to state 112
    expression             go to state 49
    term                   go to state 50
    power                  go to state 51
    unary                  go to state 52
    primary                go to state 53


State 91

   44 operator: ADDOP •

    $default  reduce using rule 44 (operator)


State 92

   45 operator: MULOP •

    $default  reduce using rule 45 (operator)


State 93

   47 operator: EXPOP •

    $default  reduce using rule 47 (operator)


State 94

   46 operator: REMOP •

    $default  reduce using rule 46 (operator)


State 95

   31 statement: FOLD direction operator • list_choice ENDFOLD

    IDENTIFIER  shift, and go to state 113
    '('         shift, and go to state 101

    list         go to state 114
    list_choice  go to state 115


State 96

   68 primary: '(' expression ')' •

    $default  reduce using rule 68 (primary)


State 97

   59 expression: expression ADDOP term •
   61 term: term • MULOP power
   62     | term • REMOP power

    MULOP  shift, and go to state 76
    REMOP  shift, and go to state 77

    $default  reduce using rule 59 (expression)


State 98

   61 term: term MULOP power •

    $default  reduce using rule 61 (term)


State 99

   62 term: term REMOP power •

    $default  reduce using rule 62 (term)


State 100

   64 power: unary EXPOP power •

    $default  reduce using rule 64 (power)


State 101

   18 list: '(' • expressions ')'

    IDENTIFIER    shift, and go to state 36
    INT_LITERAL   shift, and go to state 37
    CHAR_LITERAL  shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39
    NEGOP         shift, and go to state 40
    '('           shift, and go to state 46

    expressions  go to state 116
    expression   go to state 117
    term         go to state 50
    power        go to state 51
    unary        go to state 52
    primary      go to state 53


State 102

   16 variable: IDENTIFIER ':' LIST OF type IS list • ';'

    ';'  shift, and go to state 118


State 103

   72 primary: IDENTIFIER '(' expression ')' •

    $default  reduce using rule 72 (primary)


State 104

   30 statement: SWITCH expression IS cases • OTHERS ARROW statement ';' ENDSWITCH
   37 cases: cases • case

    CASE    shift, and go to state 119
    OTHERS  shift, and go to state 120

    case  go to state 121


State 105

   57 relation: '(' condition ')' •

    $default  reduce using rule 57 (relation)


State 106

   29 statement: WHEN condition ',' expression • ':' expression
   59 expression: expression • ADDOP term
